--- a/instagram/frontend/src/components/App/styles.scss
+++ b/instagram/frontend/src/components/App/styles.scss
@@ -1,5 +1,8 @@
-@import "react-css/reset.css";
-
+@import "reset-css/reset.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i');
 body {
-    background-color: $bg-color;
+  background-color: $bg-color;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+  //font-family: -apple-system,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
