--- a/instagram/frontend/src/components/App/styles.scss
+++ b/instagram/frontend/src/components/App/styles.scss
@@ -1,8 +1,15 @@
 @import "reset-css/reset.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i');
+
 body {
   background-color: $bg-color;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
   //font-family: -apple-system,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-size: $normal-font-size;
+
+}
+
+img {
+  max-width: 100%;
 }
