--- a/instagram/frontend/src/components/App/styles.scss
+++ b/instagram/frontend/src/components/App/styles.scss
@@ -1,5 +1,5 @@
 @import "reset-css/reset.css";
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700,700i,900,900i');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700,700i,900,900i");
 
 body {
   background-color: $bg-color;
@@ -7,9 +7,11 @@ body {
     Arial, sans-serif;
   //font-family: -apple-system,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   font-size: $normal-font-size;
-
 }
 
+* {
+  box-sizing: border-box;
+}
 img {
   max-width: 100%;
 }
