--- a/instagram/frontend/src/components/Footer/styles.scss
+++ b/instagram/frontend/src/components/Footer/styles.scss
@@ -1,6 +1,6 @@
 .footer {
   max-width: $max-page-width;
-  width: 95%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -9,29 +9,26 @@
   font-size: $small-font-size;
   margin: 55px auto;
   flex-wrap: wrap;
-  @include breakpoint("phone-tablet") {
+  @include breakpoint(mobileonly) {
     justify-content: center;
-    max-width: 350px;
-    margin-bottom: 25px;
   }
   .column {
-    @include breakpoint("phone-tablet") {
+    @include breakpoint(mobileonly) {
       margin-bottom: 0;
     }
     .nav {
       .list {
         display: flex;
         flex-wrap: wrap;
-        @include breakpoint("phone-tablet") {
+        @include breakpoint(mobileonly) {
           justify-content: center;
         }
         .list-item {
           margin-right: 15px;
           color: $dark-blue;
           cursor: pointer;
-          @include breakpoint("phone-tablet") {
-            margin-bottom: 10px;
-            margin-right: 15px;
+          @include breakpoint(mobileonly) {
+            margin-bottom: 15px;
           }
         }
       }
