--- a/instagram/frontend/src/components/UserList/styles.scss
+++ b/instagram/frontend/src/components/UserList/styles.scss
@@ -33,7 +33,7 @@
       min-height: 300px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
     }
   }
 }
