--- a/instagram/frontend/src/components/UserList/styles.scss
+++ b/instagram/frontend/src/components/UserList/styles.scss
@@ -32,8 +32,8 @@
     .content {
       min-height: 300px;
       display: flex;
-      justify-content: center;
       align-items: flex-start;
+      flex-direction: column;
     }
   }
 }
