--- a/instagram/frontend/src/components/UserRow/styles.scss
+++ b/instagram/frontend/src/components/UserRow/styles.scss
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 16px;
+  padding: 10px 16px;
   width: 100%;
   box-sizing: border-box;
+  border-bottom: 1px solid $light-grey;
   .column {
     display: flex;
     align-items: center;
@@ -12,18 +13,23 @@
       margin-left: 10px;
       .username {
         font-weight: 600;
+        display: block;
+        margin-bottom: 3px;
+      }
+      .name {
+        color: $dark-grey;
       }
     }
     .bigAvatar {
-        width: 55px;
-        border-radius: 50%;
+      width: 55px;
+      border-radius: 50%;
     }
     .avatar {
-        width: 30px;
-        border-radius: 50%;
+      width: 30px;
+      border-radius: 50%;
     }
     .button {
-        @include blueButton();
+      @include blueButton();
     }
   }
 }
