--- a/instagram/frontend/src/config/_colors.scss
+++ b/instagram/frontend/src/config/_colors.scss
@@ -1,6 +1,6 @@
 $bg-color: #fafafa;
 $dark-blue: #003569;
-$light-blue: #3897f0;
+$light-blue: #93a5de;
 $dark-grey: #999;
 $border-color: #e6e6e6;
 $light-grey: #efefef;
